# MeshBrushEditing

./: .gitmodules  CMakeLists.txt
alg/: CMakeLists.txt  deformation.cpp  deformation.h  remeshing.cpp  remeshing.h
common/: CMakeLists.txt  math_util.cpp  math_util.h  mesh_io.cpp  mesh_io.h  mesh_type.h  mesh_util.cpp  mesh_util.h
interface/: CMakeLists.txt  CMakeLists.txt.bak  window.cpp  window.h
solver/: solver.cpp
src/: main.cpp
